fix displaying long names of breaking news on small devices

--- a/imports/components/NewsContainer/SectionHeader/SectionHeader.css
+++ b/imports/components/NewsContainer/SectionHeader/SectionHeader.css
@@ -44,4 +44,8 @@
 
 .breaking-placeholder {
     margin: 0;
+    display: inline-block;
+    width: calc(100% - 120px);
+    position: relative;
+    top: 3px;
 }
